# termnoid

./: CMakeLists.txt  README.md
inc/: game.h  system.h  termnoid.h
src/: CMakeLists.txt  game.c  system.c  termnoid.c
